# DelaunayTriangulation

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  main.py  requirements.txt  test_points.txt
data/: .keys.txt  README.md
doc/: COMPILING.md  terminal_tutorial.md  tutorial.md
input/: README.md  cowboy.txt  for_illustation_mode.txt  gazou.txt  gazou_filled.txt  grid.txt  jf.txt  lmeca2170.txt  test_points.txt
output/: README.md
src/: delaunay.c  delaunay.h  geometry_structure.c  geometry_structure.h  inputs.c  inputs.h  main.c  predicates.c  predicates.h  sound.py
static/: gilles_and_louis_timing.txt  jerome_timing.txt
